[gd_scene load_steps=3 format=2]

[ext_resource path="res://common/collisions/hit_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/weapons/swords/sword.gd" type="Script" id=2]

[node name="Sword" type="Node2D"]
script = ExtResource( 2 )

[node name="WeaponContainer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="WeaponContainer"]

[node name="HitBox" parent="WeaponContainer" instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 4

[node name="EffectSprite" type="Sprite" parent="."]

[node name="WeaponAnimation" type="AnimationPlayer" parent="."]

[node name="EffectAnimation" type="AnimationPlayer" parent="."]

[node name="SoundEffect" type="AudioStreamPlayer2D" parent="."]

[editable path="WeaponContainer/HitBox"]
